tests/parser-test-files/parse-if.txt
================================================================================
100 Missing predicate
================================================================================

(package test-package)

(define x (if))

--------------------------------------------------------------------------------

error: Malformed if expression
  --> test:3:14
   |
 3 |  (define x (if))
   |               ^ expected a predicate

================================================================================
101 Missing true conditional form
================================================================================

(package test-package)

(define x (if True))

--------------------------------------------------------------------------------

error: Malformed if expression
  --> test:3:19
   |
 3 |  (define x (if True))
   |                    ^ expected a form

================================================================================
102 Missing false conditional form
================================================================================

(package test-package)

(define x (if True 2))

--------------------------------------------------------------------------------

error: Malformed if expression
  --> test:3:21
   |
 3 |  (define x (if True 2))
   |                      ^ expected a form

================================================================================
103 Illegal trailing form
================================================================================

(package test-package)

(define x (if True 2 3 4))

--------------------------------------------------------------------------------

error: Malformed if expression
  --> test:3:24
   |
 3 |  (define x (if True 2 3 4))
   |                         ^ unexpected trailing form

================================================================================
104 Non-boolean conditional
================================================================================

(package test-package)

(define x (if 0 1 2))

--------------------------------------------------------------------------------

error: Unknown instance
  --> test:3:14
   |
 3 |  (define x (if 0 1 2))
   |                ^ Unknown instance COALTON-LIBRARY/CLASSES:NUM BOOLEAN

